# quadcopter_personal_2026S

./: CMakeLists.txt  MUJOCO_LOG.TXT  README.md
config/: controller_params.yaml  estimator_params.yaml  imu_params.yaml
config/sim/: skydio_x2.yaml
doc/blueprint/: blueprint.md  build_report.md  dev_guide.md  visualization_guide.md
doc/report/: .latexmkrc  README.md  main.tex
include/drone/: imu.hpp  trajectory.hpp  utils.hpp
include/drone/estimator/: ekf.hpp  estimator_base.hpp
sim/: mujoco_env.cpp  mujoco_env.hpp  sensor_bridge.cpp  sensor_bridge.hpp  visualizer.cpp  visualizer.hpp
src/: main.cpp  trajectory.cpp
src/controller/: mpc.cpp  pid.cpp
src/estimator/: ekf.cpp
test/controller/: test_controller.cpp
test/estimator/: test_estimator.cpp
test/imu/: test_imu.cpp
test/trajectory/: test_trajectory.cpp
